First iterations of actual lobby chat working

--- a/angular-client/src/app/components/match-making/lobby-chat-box/lobby-chat-box.component.html
+++ b/angular-client/src/app/components/match-making/lobby-chat-box/lobby-chat-box.component.html
@@ -13,7 +13,7 @@
       <mat-label>Chat</mat-label>
       <input
         [(ngModel)]="newMessage"
-        (keydown.enter)="sendMessage($event)"
+        (keydown.enter)="sendMessage()"
         cdkTextareaAutosize
         matInput
         maxlength="250"
