--- a/angular-client/src/app/components/match-making/lobby-chat-box/lobby-chat-box.component.html
+++ b/angular-client/src/app/components/match-making/lobby-chat-box/lobby-chat-box.component.html
@@ -1,7 +1,9 @@
 <div class="chat-box">
   <div class="message-area" #scrollable>
     <div *ngFor="let message of messages">
-      <span class="username">{{ message.from.username }}</span>
+      <span class="username" [ngStyle]="{ color: message.from.color }">{{
+        message.from.username
+      }}</span>
       <span class="timestamp"
         >[{{ message.createdAt | date: 'mediumTime' }}]</span
       >:
