Party Leader chat icon

--- a/angular-client/src/app/components/match-making/lobby-chat-box/lobby-chat-box.component.css
+++ b/angular-client/src/app/components/match-making/lobby-chat-box/lobby-chat-box.component.css
@@ -37,3 +37,11 @@
   width: 100%;
   max-width: 100%;
 }
+
+.party-leader-icon {
+  width: 20px;
+  height: auto;
+  vertical-align: middle;
+  margin-bottom: 1px;
+  cursor: pointer;
+}
