--- a/angular-client/src/app/components/match-making/lobby-chat-box/lobby-chat-box.component.html
+++ b/angular-client/src/app/components/match-making/lobby-chat-box/lobby-chat-box.component.html
@@ -1,12 +1,18 @@
 <div class="chat-box">
   <div class="message-area" #scrollable>
     <div *ngFor="let message of messages">
-      <span class="username" [ngStyle]="{ color: message.from.color }">{{
-        message.from.username
-      }}</span>
+      <span class="username" [ngStyle]="{ color: message.from.color }">
+        <img
+          *ngIf="message.from.isHost"
+          matTooltip="Party Leader"
+          src="/assets/party-leader/party-leader.png"
+          alt="party-leader"
+          class="party-leader-icon" />
+        {{ message.from.username }}
+      </span>
       <span class="timestamp"
-        >[{{ message.createdAt | date: 'mediumTime' }}]</span
-      >:
+        >[{{ message.createdAt | date: 'mediumTime' }}]:</span
+      >
       <span class="message-content">{{ message.content }}</span>
     </div>
   </div>
