Decouple presence from status

--- a/angular-client/src/app/components/misc/status-bubble/status-bubble.component.html
+++ b/angular-client/src/app/components/misc/status-bubble/status-bubble.component.html
@@ -1,5 +1,5 @@
 <app-info-bubble
-  *ngIf="status?.presence === 'Online'"
+  *ngIf="presence === 'Online'"
   class="status-bubble"
   [toolTipText]="toolTipText"
   [infoText]="status?.activity"
