--- a/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
@@ -8,7 +8,7 @@
       class="presence"
       [size]="15"
       [readOnly]="false"
-      [presence]="user?.status?.presence"></app-presence>
+      [presence]="user?.presence"></app-presence>
   </ng-container>
   <div class="flex-spacer"></div>
   <app-navigation-menu class="navigation-menu"></app-navigation-menu>
