Add online presence bubble to friend request invite menu

--- a/angular-client/src/app/components/match-making/invite-friend-menu/invite-friend-menu.component.html
+++ b/angular-client/src/app/components/match-making/invite-friend-menu/invite-friend-menu.component.html
@@ -27,6 +27,9 @@
         mat-menu-item
         *ngFor="let friend of filteredFriends$ | async"
         (click)="invite(friend)">
+        <app-presence
+          class="presence"
+          [presence]="friend?.presence"></app-presence>
         {{ friend.username }}
       </button>
     </div>
