Add status bubble

--- a/angular-client/src/app/components/match-making/invite-friend-menu/invite-friend-menu.component.css
+++ b/angular-client/src/app/components/match-making/invite-friend-menu/invite-friend-menu.component.css
@@ -24,6 +24,10 @@
   max-height: 250px; /* Adjust to control the scrollable area height */
 }
 
-.example-full-width {
+.full-width {
   width: 100%;
+}
+
+.status-bubble {
+  margin-left: 7px;
 }
