Lobby isReady logic improved

--- a/angular-client/src/app/components/match-making/lobby-panel/lobby-panel.component.html
+++ b/angular-client/src/app/components/match-making/lobby-panel/lobby-panel.component.html
@@ -2,100 +2,96 @@
   class="lobby-panel"
   [ngClass]="{ 'invite-panel': !member, 'active-panel': member }">
   <ng-container *ngIf="decodedJwt$ | async as decodedJwt">
-    <ng-container *ngIf="host$ | async as host">
-      <ng-container *ngIf="member; else invitePanel">
-        <div class="crown-container">
-          <img
-            *ngIf="member.isHost"
-            matTooltip="Party Leader"
-            src="/assets/party-leader/party-leader-crown.png"
-            alt="party-leader"
-            class="party-leader" />
-        </div>
-        <div class="member-info">
-          <img src="/assets/qwicki-coin.png" alt="{{ member.username }}" />
-          <span>{{ member.username }}</span>
-        </div>
-        <ng-container *ngIf="{ isReady: isReady$ | async } as data">
-          <mat-chip-option
-            [disabled]="member._id !== decodedJwt._id"
-            aria-label="Ready"
-            (click)="onReadyChange(member)"
-            [selected]="data.isReady"
-            [value]="data.isReady"
-            class="ready-status"
-            [ngClass]="{
-              'ready-chip': data.isReady,
-              'not-ready-chip': !data.isReady
-            }">
-            {{ data.isReady ? 'Ready' : 'Not Ready' }}
-          </mat-chip-option>
-        </ng-container>
-        <div class="member-controls">
-          <!-- Current member panel controls -->
-          <span
-            *ngIf="member._id === decodedJwt._id"
-            matTooltip="Leave Lobby"
-            (click)="leaveLobby()"
-            class="material-icons-outlined"
-            aria-label="Leave Lobby">
-            exit_to_app
-          </span>
-
-          <!-- Host controls for other member panels -->
-          <ng-container
-            *ngIf="
-              host._id === decodedJwt._id && member._id !== decodedJwt._id
-            ">
-            <span
-              matTooltip="Kick Member"
-              (click)="kickMember(member)"
-              class="material-icons-outlined"
-              aria-label="Kick Member">
-              group_remove
-            </span>
-            <span
-              matTooltip="Transfer Host"
-              (click)="transferHost(member)"
-              class="material-icons-outlined"
-              aria-label="Transfer Host">
-              swap_horiz
-            </span>
-          </ng-container>
-
-          <!-- Member controls for other member panels -->
-          <span
-            *ngIf="
-              !(
-                member._id === decodedJwt._id ||
-                (host._id === decodedJwt._id && member._id !== decodedJwt._id)
-              )
-            "
-            class="member-controls-placeholder"></span>
-
-          <!-- Controls for other member panels regardless of member type -->
-          <ng-container *ngIf="member._id !== decodedJwt._id">
-            <span
-              *ngIf="(isFriend(member) | async) === false"
-              matTooltip="Send Friend Request"
-              (click)="sendFriendRequest(member)"
-              class="material-icons-outlined"
-              aria-label="Send Friend Request">
-              person_add
-            </span>
-          </ng-container>
-        </div>
+    <ng-container *ngIf="member; else invitePanel">
+      <div class="crown-container">
+        <img
+          *ngIf="member.isHost"
+          matTooltip="Party Leader"
+          src="/assets/party-leader/party-leader-crown.png"
+          alt="party-leader"
+          class="party-leader" />
+      </div>
+      <div class="member-info">
+        <img src="/assets/qwicki-coin.png" alt="{{ member.username }}" />
+        <span>{{ member.username }}</span>
+      </div>
+      <ng-container *ngIf="{ isReady: isReady$ | async } as data">
+        <mat-chip-option
+          [hidden]="hideIsReady"
+          [disabled]="member._id !== decodedJwt._id"
+          aria-label="Ready"
+          (click)="onReadyChange(member)"
+          [selected]="data.isReady"
+          [value]="data.isReady"
+          class="ready-status"
+          [ngClass]="{
+            'ready-chip': data.isReady,
+            'not-ready-chip': !data.isReady
+          }">
+          {{ data.isReady ? 'Ready' : 'Not Ready' }}
+        </mat-chip-option>
       </ng-container>
-      <ng-template #invitePanel>
-        <div
-          matTooltip="Invite Friend"
-          class="empty-icon"
-          (click)="inviteFriendMenu.openMenu()">
-          <app-invite-friend-menu
-            [toolTipText]="null"
-            #inviteFriendMenu></app-invite-friend-menu>
-        </div>
-      </ng-template>
+      <div class="member-controls">
+        <!-- Current member panel controls -->
+        <span
+          *ngIf="member._id === decodedJwt._id"
+          matTooltip="Leave Lobby"
+          (click)="leaveLobby()"
+          class="material-icons-outlined"
+          aria-label="Leave Lobby">
+          exit_to_app
+        </span>
+
+        <!-- Host controls for other member panels -->
+        <ng-container *ngIf="isHost() && member._id !== decodedJwt._id">
+          <span
+            matTooltip="Kick Member"
+            (click)="kickMember(member)"
+            class="material-icons-outlined"
+            aria-label="Kick Member">
+            group_remove
+          </span>
+          <span
+            matTooltip="Transfer Host"
+            (click)="transferHost(member)"
+            class="material-icons-outlined"
+            aria-label="Transfer Host">
+            swap_horiz
+          </span>
+        </ng-container>
+
+        <!-- Member controls for other member panels -->
+        <span
+          *ngIf="
+            !(
+              member._id === decodedJwt._id ||
+              (isHost() && member._id !== decodedJwt._id)
+            )
+          "
+          class="member-controls-placeholder"></span>
+
+        <!-- Controls for other member panels regardless of member type -->
+        <ng-container *ngIf="member._id !== decodedJwt._id">
+          <span
+            *ngIf="(isFriend(member) | async) === false"
+            matTooltip="Send Friend Request"
+            (click)="sendFriendRequest(member)"
+            class="material-icons-outlined"
+            aria-label="Send Friend Request">
+            person_add
+          </span>
+        </ng-container>
+      </div>
     </ng-container>
+    <ng-template #invitePanel>
+      <div
+        matTooltip="Invite Friend"
+        class="empty-icon"
+        (click)="inviteFriendMenu.openMenu()">
+        <app-invite-friend-menu
+          [toolTipText]="null"
+          #inviteFriendMenu></app-invite-friend-menu>
+      </div>
+    </ng-template>
   </ng-container>
 </div>
