Starter code for matchmaking

--- a/angular-client/src/app/components/layout/main-layout/main-layout.component.html
+++ b/angular-client/src/app/components/layout/main-layout/main-layout.component.html
@@ -13,6 +13,6 @@
     opened
     disableClose="true"
     class="sidenav">
-    right
+    <app-match-making-sidenav></app-match-making-sidenav>
   </mat-sidenav>
 </mat-sidenav-container>
